basic swagger setup
